--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="game"></div>
+    <div id="debug"></div>
     <script type="module" src="/demo/main.ts"></script>
   </body>
 </html>
